# server-monitor

./: .env.example  .gitignore  README.md  docker-compose.yml  reset-mysql-password.ps1
agent/: .env.example  agent.py  requirements.txt
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: alerts.py  auth.py  logs.py  metrics.py  servers.py  websocket.py
backend/app/core/: config.py  database.py  security.py
backend/app/schemas/: schemas.py
backend/app/services/: alert_poller.py  email_service.py  sms_service.py
database/: 001_schema.sql  002_triggers.sql  003_procedures.sql  004_seed.sql  005_email_logs.sql  006_log_viewer_and_uptime.sql  add_history_proc.sql  fix_trigger.sql  init.sh
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AddServerModal.jsx  AlertSummary.jsx  AlertTable.jsx  LiveGauges.jsx  LogViewer.jsx  MetricsCharts.jsx  MetricsHistoryChart.jsx  ServerGrid.jsx  UptimeChart.jsx
frontend/src/hooks/: usePolling.js
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx
frontend/src/services/: api.js
